// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Checkout Started event correctly 1`] = `
Array [
  Array [
    "event",
    "begin_checkout",
    Object {
      "coupon": "acme2019",
      "currency": "USD",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": undefined,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 19,
          "quantity": 1,
        },
      ],
      "value": 30.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Login event correctly 1`] = `
Array [
  Array [
    "event",
    "login",
    Object {
      "method": "Acme",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Order Completed event correctly 1`] = `
Array [
  Array [
    "event",
    "purchase",
    Object {
      "affiliation": undefined,
      "coupon": "acme2019",
      "currency": "USD",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": undefined,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 19,
          "quantity": 1,
        },
      ],
      "shipping": 3.6,
      "tax": 2.04,
      "transaction_id": "50314b8e9bcf000000000000",
      "value": 30.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Order Refunded event correctly 1`] = `
Array [
  Array [
    "event",
    "refund",
    Object {
      "affiliation": undefined,
      "coupon": undefined,
      "currency": "USD",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": undefined,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 19,
          "quantity": 1,
        },
      ],
      "shipping": undefined,
      "tax": undefined,
      "transaction_id": "50314b8e9bcf000000000000",
      "value": 30,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Payment Info Added event correctly 1`] = `
Array [
  Array [
    "event",
    "add_payment_info",
    Object {
      "coupon": "acme2019",
      "currency": "USD",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": undefined,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 19,
          "quantity": 1,
        },
      ],
      "payment_type": "credit card",
      "value": 30.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Product Added to Cart event correctly 1`] = `
Array [
  Array [
    "event",
    "add_to_cart",
    Object {
      "currency": "USD",
      "from": "PDP",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": undefined,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 18.99,
          "quantity": 1,
        },
      ],
      "value": 18.99,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Product Added to Wishlist event correctly 1`] = `
Array [
  Array [
    "event",
    "add_to_wishlist",
    Object {
      "currency": "USD",
      "from": undefined,
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": undefined,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": "Woman shopping",
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 18.99,
          "quantity": undefined,
        },
      ],
      "value": 18.99,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Product Clicked event correctly 1`] = `
Array [
  Array [
    "event",
    "select_item",
    Object {
      "item_list_id": undefined,
      "item_list_name": "Woman shopping",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "GBP",
          "discount": undefined,
          "index": 3,
          "item_brand": undefined,
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": "Woman shopping",
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": undefined,
          "location_id": undefined,
          "price": 10,
          "quantity": undefined,
        },
      ],
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Product List Viewed event correctly 1`] = `
Array [
  Array [
    "event",
    "view_item_list",
    Object {
      "error": undefined,
      "filters": undefined,
      "from": undefined,
      "item_list_id": undefined,
      "item_list_name": "Woman shopping",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": undefined,
          "index": 2,
          "item_brand": undefined,
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": "Woman shopping",
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": undefined,
          "location_id": undefined,
          "price": 18.99,
          "quantity": undefined,
        },
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": undefined,
          "index": 3,
          "item_brand": undefined,
          "item_id": "507f1f77bcf86cd799439012",
          "item_list_id": undefined,
          "item_list_name": "Woman shopping",
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": undefined,
          "location_id": undefined,
          "price": 18.99,
          "quantity": undefined,
        },
      ],
      "non_interaction": true,
      "sort_option": undefined,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Product Removed from Cart event correctly 1`] = `
Array [
  Array [
    "event",
    "remove_from_cart",
    Object {
      "currency": "USD",
      "from": "Bag",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": undefined,
          "index": 1,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 18.99,
          "quantity": 1,
        },
      ],
      "value": 18.99,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Product Viewed event correctly 1`] = `
Array [
  Array [
    "event",
    "view_item",
    Object {
      "currency": "USD",
      "from": undefined,
      "image_count": undefined,
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": undefined,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 18.99,
          "quantity": undefined,
        },
      ],
      "non_interaction": true,
      "value": 18.99,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Select Content event correctly 1`] = `
Array [
  Array [
    "event",
    "select_content",
    Object {
      "content_type": "biz",
      "item_id": 12312312,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Shipping Info Added event correctly 1`] = `
Array [
  Array [
    "event",
    "add_shipping_info",
    Object {
      "address_finder": 0,
      "coupon": "acme2019",
      "currency": "USD",
      "delivery_type": undefined,
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": "USD",
          "discount": undefined,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 19,
          "quantity": 1,
        },
      ],
      "packaging_type": undefined,
      "shipping_tier": "Next Day",
      "value": 30.64,
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the Sign-up Form Completed event correctly 1`] = `
Array [
  Array [
    "event",
    "sign_up",
    Object {
      "method": "Acme",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the bag event correctly 1`] = `
Array [
  Array [
    "event",
    "view_cart",
    Object {
      "currency": "USD",
      "from": "Bag",
      "items": Array [
        Object {
          "affiliation": undefined,
          "coupon": undefined,
          "currency": undefined,
          "discount": undefined,
          "index": undefined,
          "item_brand": "Just A T-Shirt",
          "item_category": "Clothing",
          "item_category2": "Tops",
          "item_category3": "T-shirts",
          "item_id": "507f1f77bcf86cd799439011",
          "item_list_id": undefined,
          "item_list_name": undefined,
          "item_name": "Gareth McConnell Dreamscape T-Shirt",
          "item_variant": "Black",
          "location_id": undefined,
          "price": 19,
          "quantity": 1,
        },
      ],
      "value": 19,
    },
  ],
  Array [
    "config",
    "GA-123456-12",
    Object {
      "page_path": "/pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
    },
  ],
]
`;

exports[`GA4 Integration GA4 instance When it is instantiated correctly Event Mappings Should map the search event correctly 1`] = `
Array [
  Array [
    "event",
    "search",
    Object {
      "search_term": "shoes",
    },
  ],
  Array [
    "config",
    "GA-123456-12",
    Object {
      "page_path": "/pt/?utm_term=utm_term&utm_source=utm_source&utm_medium=utm_medium&utm_content=utm_content&utm_campaign=utm_campaign",
    },
  ],
]
`;
